--- a/ZodiacBuddy/ZodiacBuddy.yaml
+++ b/ZodiacBuddy/ZodiacBuddy.yaml
@@ -1,7 +1,7 @@
-author: daemitus, hiroa
-name: ZodiacBuddy
-punchline: Complete your Zodiac relic with style.
-description: This plugin attempts to help you complete your Zodiac weapon in various ways.
-repo_url: https://github.com/daemitus/ZodiacBuddy
+author: daemitus, hiroa, LTS
+name: ZodiacBuddyExpanded
+punchline: Complete your Zodiac relic with riz.
+description: This plugin attempts to help you complete your Zodiac weapon in even more various ways.
+repo_url: https://github.com/LTS-FFXIV/ZodiacBuddyExpanded
 icon_url: https://raw.githubusercontent.com/daemitus/ZodiacBuddy/master/images/icon.png
 image_urls: []
