--- a/ZodiacBuddy/ZodiacBuddy.csproj
+++ b/ZodiacBuddy/ZodiacBuddy.csproj
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Authors>daemitus</Authors>
+    <Authors>LTS</Authors>
     <Company>-</Company>
-    <Version>0.2.0.0</Version>
-    <Description>Complete your Zodiac relic with style.</Description>
-    <PackageProjectUrl>https://github.com/daemitus/ZodiacBuddy</PackageProjectUrl>
+    <Version>1.0.0.0</Version>
+    <Description>Complete your Zodiac relic with riz.</Description>
+    <PackageProjectUrl>https://github.com/LTS-FFXIV/ZodiacBuddyExpanded</PackageProjectUrl>
   </PropertyGroup>
 
   <PropertyGroup>
